@@ -16,7 +16,6 @@ libkchartpart_la_SOURCES = kchart_part.cc \
 	kchartPieConfigPage.cc \
 	kchartParameterPieConfigPage.cc \
 	kchartConfigDialog.cc \
-	kchartGeometryConfigPage.cc \
 	kchartWizard.cc \
 	kchartWizardLabelsLegendPage.cc \
 	kchartWizardSelectChartSubTypePage.cc \
@@ -56,7 +55,6 @@ noinst_HEADERS =  kchart_part.h \
 		kchartDataConfigPage.h \
 		kchartPieConfigPage.h \
 		kchartConfigDialog.h \
-		kchartGeometryConfigPage.h \
 		kchartWizard.h \
 		kchartWizardLabelsLegendPage.h \
 		kchartWizardSelectChartSubTypePage.h \
